# pdfcast

./: .gitignore  .jekyll-metadata  Dockerfile  Gemfile  README.md  _config.yml  docker-compose.yml  feed.xml  figure_extract.py  gemini_math_extract.py  index.html  math_extract.py  openai_math_extract.py  popos.sh  pyproject.toml  retrieve.py  serve.sh  update  update.sh
_includes/: head.html
_layouts/: article.html
_posts/: 2024-11-18-2.md  2024-11-19-03ea8a08fb62534311cad32dcd21e879.md  2024-11-19-0ca879f8d33bba748f84ed82e0200541.md  2024-11-19-0e26fdaa9a90f19ad8d796aca3b26351.md  2024-11-19-1.md  2024-11-19-12691171481319512.md  2024-11-19-16fafe57ff01be19177a7409cd3f2145.md  2024-11-19-2.md  2024-11-19-2100d7763666ac27ba3a0c46270a0b03.md  2024-11-19-2144e9afa5f112a843b0d093688eeadd.md  2024-11-19-2609102fbb2164c30de528f41b2fb3a8.md  2024-11-19-284dba2e5ce61978dfb247c9f578dce7.md  2024-11-19-294e8d8a5fa582d1b044f8e36e3ea3c8.md  2024-11-19-31216c6fb1e81af4549d68af4fa75202.md  2024-11-19-456fbe2ad2c72cbd7f0a0b23f3813044.md  2024-11-19-460045ca21582383b99eb7703e9e26a7.md  2024-11-19-4f5506db129563c4b7684618fa4c1762.md  2024-11-19-5047921750472870719.md  2024-11-19-540464969141221323.md  2024-11-19-5774ed545c57a0e6db803e56de4749fb.md  2024-11-19-5968767173838825658.md  2024-11-19-5f643527e54a40b27d6ec6004e2e1f29.md  2024-11-19-6027989371311750009.md  2024-11-19-6257984705616754659.md  2024-11-19-72d32df215452b4da7291a2ee086ef1c.md  2024-11-19-7493e8962a499136936531feac7fc3bf.md  2024-11-19-764b51e30b4723a478484f6945d937db.md  2024-11-19-8247826357399195864.md  (+69 more)
(+150 files in other folders)
