[project]
name = "pdfcast"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "roppinhoppin", email = "roppinhoppin@gmail.com" }
]
dependencies = [
    "magic-pdf[full]>=0.10.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
extra-index-url = ["https://wheels.myhloli.com"]

[[tool.rye.sources]]
name = "myhloli"
url = "https://wheels.myhloli.com"
type = "index"

[tool.uv]
extra-index-url = ["https://wheels.myhloli.com"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdfcast"]
